--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <article>
-      <h2>Converse Chuck Taylor All Star Low Top</h2>
+    <article class="product">
+      <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
       <img src="challenges.jpg" height="250px" width="250px" />
-      <h2>$65.00</h2>
-      <p>Free Shipping</p>
+      <h2 class="price">$65.00</h2>
+      <p class="shp">Free Shipping</p>
       <p>
         Ready to dress up or down, these classic canvas Chucks are an everyday
         wardrobe staple
       </p>
-      <a href="#">More information &rarr;</a>
-      <h3>Product details</h3>
-      <ul>
+      <a class="more-info" href="#">More information &rarr;</a>
+      <h3 class="details-title">Product details</h3>
+      <ul class="details-lists">
         <li>Lightweight, durable canvas sneaker</li>
         <li>Lightly padded footbed for added comfort</li>
         <li>Iconic Chuck Taylor ankle path</li>
       </ul>
-      <button>Add to cart</button>
+      <button class="add-cart">Add to cart</button>
     </article>
   </body>
 </html>
